fix: structure update

--- a/docs/pages/resources/branding-and-logos.mdx
+++ b/docs/pages/resources/branding-and-logos.mdx
@@ -61,7 +61,7 @@ surge-do-not-misuse:
 
 ![surge-full-primary-black.png](https://surge.sfo3.cdn.digitaloceanspaces.com/assets/Surge%20Branding%20Logos/docs-only/surge-do-not-misuse.png)
 
-surge-superstack-full-light:
+{/* surge-superstack-full-light:
 
 ![surge-full-primary-black.png](https://surge.sfo3.cdn.digitaloceanspaces.com/assets/Surge%20Branding%20Logos/docs-only/surge-superstack-full-light.png)
 
@@ -81,9 +81,9 @@ clearspace-surge-superstack-full-primary:
 
 ![surge-full-primary-black.png](https://surge.sfo3.cdn.digitaloceanspaces.com/assets/Surge%20Branding%20Logos/docs-only/clearspace-surge-superstack-full-primary.png)
 
-surge-superstack-do-not-misuse:
+surge-superstack-do-not-misuse: */}
 
-![surge-full-primary-black.png](https://surge.sfo3.cdn.digitaloceanspaces.com/assets/Surge%20Branding%20Logos/docs-only/surge-superstack-do-not-misuse.png)
+{/* ![surge-full-primary-black.png](https://surge.sfo3.cdn.digitaloceanspaces.com/assets/Surge%20Branding%20Logos/docs-only/surge-superstack-do-not-misuse.png) */}
 
 ## Colours
 
