--- a/docs/pages/index.mdx
+++ b/docs/pages/index.mdx
@@ -26,7 +26,7 @@ import BitcoinPlayground from "../components/BitcoinPlayground.tsx";
     <div className="grid grid-cols-1 md:grid-cols-2 gap-5">
       <SurgeNetwork/>
       <SurgeIntro/>
-      <BitcoinPlayground/>
+      {/* <BitcoinPlayground/> */}
       <Resources/>
     </div>
 
