fix: structure update

--- a/docs/pages/overview/introduction.mdx
+++ b/docs/pages/overview/introduction.mdx
@@ -5,9 +5,16 @@ description: Composable MetaLayer to scale Bitcoin
 
 <img src="/assets/intro.png" alt="Introduction" />
 
-# Introduction to Surge [Composable MetaLayer to scale Bitcoin]
+# Introduction [Composable MetaLayer to scale Bitcoin]
 
-Surge, a Composable MetaLayer on Bitcoin built to provide a secure network for launching Rollups, and dApps to scale Bitcoin innovation. Combining Bitcoin's robust security model with advanced cryptographic techniques like Zero-Knowledge Proofs. At the core of the architecture are zk-aggregation and decentralized verification mechanisms, which ensure scalability without compromising security. Surge serves as the interstitial metalayer for Rollups and dApps, inheriting Bitcoin’s security and extending it to everything built on the network.
+Surge is Bitcoin’s first **Composable Scaling Metalayer**, aimed to unlock the new BTCFi Economy.
 
-Surge’s vision is establishing a MetaLayer that extends Bitcoin’s security model to decentralized applications, protocols, and rollups. Surge offers a composable environment where developers can deploy rollups that interoperate seamlessly while unlocking Bitcoin liquidity and scaling capabilities. Surge emphasizes zk-aggregation, decentralized verification, and an integrated signing and indexing architecture to unlock Bitcoin liquidity while expanding its scalability.
+Rethinking how Bitcoin scaling is approached, Surge facilitates a solution-agnostic future where Rollups, dApps and metaprotocols seamlessly interoperate on a decentralised intermediary layer — whose sole purpose is to push the boundaries of Bitcoin functionality enabling an environment with high-throughput, cost-effective and higher program expressivity.
 
+Surge achieves this by using advanced cryptographic technologies like zero-knowledge proofs. It takes it one step further by designing its core-architecture to ensure high scalability without compromising security.
+
+**Using zk-aggregation and decentralised verification mechanisms, Surge is tuned for drastic cost reduction in verifying and pushing proofs to Bitcoin.**
+
+This sets up the perfect environment for builders to focus on launching their ideas be it App-specific Rollups, GameFi, Ordinals or any other DeFi use-case whilst inheriting the security and the liquidity of Bitcoin.
+
+**What set’s Surge apart from most other scaling approaches is it’s zero-dependance on Bitcoin soft-forks or core-level updates.**
