--- a/docs/pages/metalayer/overview.mdx
+++ b/docs/pages/metalayer/overview.mdx
@@ -5,39 +5,42 @@ description: A Bitcoin native MetaLayer for Scaling
 
 import ZoomImage from "../../components/ZoomImage";
 
-# Surge Network [The MetaLayer to scale Rollups on Bitcoin]
+# Essentials
+## What is Surge Metalayer?
 
-## Overview
+Surge Network is a composable MetaLayer on Bitcoin built to provide a secure, fast, cheap network for launching Rollups and dApps to scale Bitcoin innovation. It combines Bitcoin's robust security model with advanced cryptographic techniques like zkp-aggregation and decentralized verification mechanisms, which ensure scalability without compromising security. 
 
-Surge Network is a composable MetaLayer on Bitcoin built to provide a secure network for launching Rollups, and dApps to scale Bitcoin innovation. Combining Bitcoin's robust security model with advanced cryptographic techniques like Zero-Knowledge Proofs. At the core of the architecture are zk-aggregation and decentralized verification mechanisms, which ensure scalability without compromising security. Surge serves as the interstitial metalayer for Rollups and dApps, inheriting Bitcoin’s security and extending it to everything built on the network.
+In short, Surge serves as the ideal interstitial metalayer, inheriting Bitcoin’s security and extending it to everything built on top of its network.
 
-## Why a Bitcoin Native MetaLayer?
+## Why build a Metalayer?
 
-A Bitcoin Native MetaLayer, like the Surge MetaLayer, is essential because it leverages Bitcoin's unparalleled security while addressing its limitations in scalability and functionality. Bitcoin, though secure and decentralized, struggles to handle the high transaction volumes and complex operations needed for advanced decentralized applications (dApps).
+Having studied various Bitcoin scaling approaches, the race to scale Bitcoin is real and there is no set way of ***getting it right.***
 
-The Surge MetaLayer solves this by providing enhanced throughput and smart contract capabilities without altering Bitcoin's core layer. Additionally, through Inter-Blockchain Communication (IBC), Surge enables seamless interaction with other blockchain ecosystems, facilitating the transfer of assets, data, and zk-proofs. This composability not only scales Bitcoin but also fosters greater flexibility and interoperability for developers, empowering them to build unified applications across multiple chains.
+Be it protocol level changes like OP_CAT, inscription based solutions or various other off-chain-compute on-chain-verify solutions, one thing is clear — Most upcoming scaling projects **will bloat the state of Bitcoin**
 
-## Building Blocks of Surge Network
+This in turn will price out a majority of the current Bitcoin users due to extremely high transaction fees and multiple scaling solutions competing for the already limited blockspace.
 
-### Verifiers
+Our approach to solving this problem is by using a novel way of aggregating proofs. Surge’s architecture routes zero-knowledge proofs across multiple rollups, dApps on it and aggregates it on the metalayer, to drastically reduce the footprint of data that needs to be attested on Bitcoin to main the state. 
 
-ZKP Verification Layer: The Verifiers are responsible for validating the correctness of transaction proofs using Zero-Knowledge Proofs without revealing any underlying data. This process enhances both privacy and security, serving as a foundational layer for trustless and verifiable Rollup interactions on Bitcoin. By ensuring that all transactions are legitimate without exposing sensitive information, Verifiers maintain the integrity and confidentiality of the network.
+This not only drives the cost down for L2s it also cuts the frequency needed to push data on mainchain thereby further freeing up blockspace.
 
-### Signers
 
-Transaction Signing and Key Management: Signers handle the critical task of transaction signing and managing distributed cryptographic keys. They govern BTC vault operations with precision and reliability, ensuring that all transactions are authorized and secure. By distributing key management, Signers enhance the network's resilience against single points of failure and potential security breaches.
+## How does it work?
 
-### Indexers
+The Surge network adopts a modular approach, leveraging the best practices and lessons from other ecosystems. Inspired by the Cosmos modular design, Surge enables decentralized proof validation, while CometBFT ensures Byzantine Fault Tolerant (BFT) consensus across the network, offering high performance and security. The Surge Integration Kit empowers developers to integrate Zero-Knowledge Proofs (ZKPs) and deploy secure rollups and dApps, inheriting Bitcoin's robust security guarantees. This approach provides a reliable foundation for Surge's key network components:
 
-Efficient Data Organization and Access: Indexers provide efficient tools for organizing and accessing transaction data, which is essential for maintaining scalability. They facilitate quick retrieval and processing of data, enabling the network to handle large volumes of transactions seamlessly. This component ensures that Surge can support high throughput while maintaining data integrity and accessibility.
+- **1. Verifiers:**
+    
+    Dedicated to zk-proof verification, Surge Verifiers are integral in aggregating and settling validated proofs on Bitcoin.
+    
+- **2. Integrated Signers:**
+    
+    These handle transaction signing and manage distributed cryptographic keys, governing BTC vault operations with precision and reliability.
+    
+- **3. UTXO Indexers:**
+    
+    Open to anyone, Indexers ensure transparent and seamless data retrieval, critical for enabling real-time audits across the network.
 
-## Impact of Soft Forks on Surge Network
-
-**Enhancing On-Chain Scripting with OP_CAT**\
-The introduction of _OP_CAT_ in a potential Bitcoin soft fork could significantly enhance the Surge Network's capabilities. _OP_CAT_, by enabling more sophisticated on-chain scripting, offers the opportunity to reduce our reliance on off-chain processes. This improvement can lead to a more streamlined and efficient system, particularly in terms of transaction execution and validation.
-
-**Optimizing Performance and Efficiency**\
-With the integration of _OP_CAT_, we anticipate being able to offload certain off-chain verification computations from the Surge Network, reallocating that processing power toward proof aggregation. This shift would not only optimize the performance of the Surge Network but also improve overall efficiency. By reducing the need for off-chain dependencies, the Surge Network can become even more robust, maintaining high levels of security and scalability while adapting to evolving technological advancements within the Bitcoin network.
 
 <ZoomImage
   src="/assets/Surge-Network.svg"
