--- a/docs/pages/surge/archive/surgenetwork.mdx
+++ b/docs/pages/surge/archive/surgenetwork.mdx
@@ -3,7 +3,7 @@ title: Surge Network
 description: A Bitcoin native MetaLayer for Scaling
 ---
 
-import ZoomImage from "../../components/ZoomImage";
+import ZoomImage from "../../../components/ZoomImage";
 
 # Surge Network [The MetaLayer to scale Rollups on Bitcoin]
 
@@ -29,6 +29,7 @@ The Surge Network operates as a crucial intermediate layer above the Bitcoin Set
   - **Bridges for Runes and Ordinals:** Specialized bridges that enable seamless integration and interaction with Runes and Ordinals, expanding the utility of rollups.
 
 ## Impact of Soft Forks on Surge Network
+
 **Enhancing On-Chain Scripting with OP_CAT**\
 The introduction of _OP_CAT_ in a potential Bitcoin soft fork could significantly enhance the Superstack's capabilities. _OP_CAT_, by enabling more sophisticated on-chain scripting, offers the opportunity to reduce our reliance on off-chain processes. This improvement can lead to a more streamlined and efficient system, particularly in terms of transaction execution and validation.
 
@@ -39,4 +40,3 @@ With the integration of _OP_CAT_, we anticipate being able to offload certain of
   src="/assets/superstack-core-functions.png"
   alt="Surge Network core functions"
 />
-
