--- a/docs/pages/surge/archive/overview.mdx
+++ b/docs/pages/surge/archive/overview.mdx
@@ -3,7 +3,7 @@ title: Surge Network
 description: A Bitcoin native MetaLayer for Scaling
 ---
 
-import ZoomImage from "../../components/ZoomImage";
+import ZoomImage from "../../../components/ZoomImage";
 
 # Surge Network [The MetaLayer to scale Rollups on Bitcoin]
 
@@ -39,7 +39,4 @@ The introduction of _OP_CAT_ in a potential Bitcoin soft fork could significantl
 **Optimizing Performance and Efficiency**\
 With the integration of _OP_CAT_, we anticipate being able to offload certain off-chain verification computations from the Surge Network, reallocating that processing power toward proof aggregation. This shift would not only optimize the performance of the Surge Network but also improve overall efficiency. By reducing the need for off-chain dependencies, the Surge Network can become even more robust, maintaining high levels of security and scalability while adapting to evolving technological advancements within the Bitcoin network.
 
-<ZoomImage
-  src="/assets/Surge-Network.svg"
-  alt="superstack core functions"
-/>
+<ZoomImage src="/assets/Surge-Network.svg" alt="superstack core functions" />
