--- a/docs/pages/surge/overview.mdx
+++ b/docs/pages/surge/overview.mdx
@@ -6,43 +6,40 @@ description: A Bitcoin native MetaLayer for Scaling
 import ZoomImage from "../../components/ZoomImage";
 
 # Essentials
+
 ## What is Surge Metalayer?
 
-Surge Network is a composable MetaLayer on Bitcoin built to provide a secure, fast, cheap network for launching Rollups and dApps to scale Bitcoin innovation. It combines Bitcoin's robust security model with advanced cryptographic techniques like zkp-aggregation and decentralized verification mechanisms, which ensure scalability without compromising security. 
+Surge Network is a composable MetaLayer on Bitcoin built to provide a secure, fast, cheap network for launching Rollups and dApps to scale Bitcoin innovation. It combines Bitcoin's robust security model with advanced cryptographic techniques like zkp-aggregation and decentralized verification mechanisms, which ensure scalability without compromising security.
 
 In short, Surge serves as the ideal interstitial metalayer, inheriting Bitcoin’s security and extending it to everything built on top of its network.
 
 ## Why build a Metalayer?
 
-Having studied various Bitcoin scaling approaches, the race to scale Bitcoin is real and there is no set way of ***getting it right.***
+Having studied various Bitcoin scaling approaches, the race to scale Bitcoin is real and there is no set way of **_getting it right._**
 
 Be it protocol level changes like OP_CAT, inscription based solutions or various other off-chain-compute on-chain-verify solutions, one thing is clear — Most upcoming scaling projects **will bloat the state of Bitcoin**
 
 This in turn will price out a majority of the current Bitcoin users due to extremely high transaction fees and multiple scaling solutions competing for the already limited blockspace.
 
-Our approach to solving this problem is by using a novel way of aggregating proofs. Surge’s architecture routes zero-knowledge proofs across multiple rollups, dApps on it and aggregates it on the metalayer, to drastically reduce the footprint of data that needs to be attested on Bitcoin to main the state. 
+Our approach to solving this problem is by using a novel way of aggregating proofs. Surge’s architecture routes zero-knowledge proofs across multiple rollups, dApps on it and aggregates it on the metalayer, to drastically reduce the footprint of data that needs to be attested on Bitcoin to main the state.
 
 This not only drives the cost down for L2s it also cuts the frequency needed to push data on mainchain thereby further freeing up blockspace.
 
+<ZoomImage src="/assets/surge_metalayer.png" alt="stack" width="100%" />
 
 ## How does it work?
 
 The Surge network adopts a modular approach, leveraging the best practices and lessons from other ecosystems. Inspired by the Cosmos modular design, Surge enables decentralized proof validation, while CometBFT ensures Byzantine Fault Tolerant (BFT) consensus across the network, offering high performance and security. The Surge Integration Kit empowers developers to integrate Zero-Knowledge Proofs (ZKPs) and deploy secure rollups and dApps, inheriting Bitcoin's robust security guarantees. This approach provides a reliable foundation for Surge's key network components:
 
 - **1. Verifiers:**
-    
-    Dedicated to zk-proof verification, Surge Verifiers are integral in aggregating and settling validated proofs on Bitcoin.
-    
+  Dedicated to zk-proof verification, Surge Verifiers are integral in aggregating and settling validated proofs on Bitcoin.
 - **2. Integrated Signers:**
-    
-    These handle transaction signing and manage distributed cryptographic keys, governing BTC vault operations with precision and reliability.
-    
+  These handle transaction signing and manage distributed cryptographic keys, governing BTC vault operations with precision and reliability.
 - **3. UTXO Indexers:**
-    
-    Open to anyone, Indexers ensure transparent and seamless data retrieval, critical for enabling real-time audits across the network.
-
+  Open to anyone, Indexers ensure transparent and seamless data retrieval, critical for enabling real-time audits across the network.
 
 <ZoomImage
-  src="/assets/Surge-Network.svg"
+  src="/assets/surge_network_architecture.png"
   alt="superstack core functions"
+  width="70%"
 />
