side bar content update

--- a/docs/pages/tech-specs/architecture/signers.mdx
+++ b/docs/pages/tech-specs/architecture/signers.mdx
@@ -3,7 +3,7 @@ title: Surge | Singer Node
 description: Decentralized TSS network for signing operations using the DKLS23 EdDSA/ECDSA scheme
 ---
 
-import ZoomImage from "../../components/ZoomImage";
+import ZoomImage from "../../../components/ZoomImage";
 
 ## Decentralized Signing and Inscription
 
