--- a/docs/pages/use-cases/native-stable-coins.mdx
+++ b/docs/pages/use-cases/native-stable-coins.mdx
@@ -3,7 +3,7 @@ title: StableCoin
 description: Rollups can also introduce fragmentation of protocol’s total value locked (TVL) and inherent liquidity.
 ---
 
-import ZoomImage from "../../../components/ZoomImage";
+import ZoomImage from "../../components/ZoomImage";
 
 # Native Stable Coins
 
