fix: minor changes

--- a/docs/pages/overview/btcFi.mdx
+++ b/docs/pages/overview/btcFi.mdx
@@ -4,7 +4,7 @@ import ZoomImage from "../../components/ZoomImage";
 
 Bitcoin doesn’t need to remain a passive asset with limited utility, nor should its network be restricted by the base layer’s capabilities. As the world’s most secure and trusted blockchain, Bitcoin holds vast untapped potential. By enabling a vertical scaling mechanism on it, we can unlock a new wave of innovation.
 
-**BTCFi—Bitcoin Decentralized Finance—is the next evolutionary step for the Bitcoin ecosystem, unlocking utility beyond the base layer by enabling decentralized financial applications directly on the Bitcoin network.**
+**BTCFi (Bitcoin Decentralized Finance) is the next evolutionary step for the Bitcoin ecosystem, unlocking utility beyond the base layer by enabling decentralized financial applications directly on the Bitcoin network.**
 
 Logically, Bitcoin acts as a great base layer for a robust DeFi market on it, here’s why:
 
