fix: content updated for the bitcoin anchor

--- a/docs/pages/tech-specs/overview.mdx
+++ b/docs/pages/tech-specs/overview.mdx
@@ -5,7 +5,7 @@ description: A Bitcoin native MetaLayer for Scaling
 
 import ZoomImage from "../../components/ZoomImage";
 
-# Essentials
+# Fundamentals
 
 ## What is Surge Metalayer?
 
