--- a/docs/pages/tech-specs/security.mdx
+++ b/docs/pages/tech-specs/security.mdx
@@ -1,4 +1,4 @@
-# Bitcoin Finality
+# Bitcoin Security
 
 Surge guarantees Bitcoin finality by inscribing both the state commitment Mroot of the Network and the aggregated proof of zk-proofs ( Pagg) onto Bitcoin by embedding the data into a UTXO using the Commit-Reveal Framework.
 Let UTXOSurge denote the Bitcoin UTXO transaction that inscribes this data:  
