change logo in docs and replaced links in the landing page

--- a/docs/pages/overview/bitcoin-scalability.mdx
+++ b/docs/pages/overview/bitcoin-scalability.mdx
@@ -12,8 +12,9 @@ And for this very reason over the past decade there have been various approaches
 
 <ZoomImage
   src="/assets/bitcoin-scaling-landscape.png"
-  alt="stack"
+  alt="Bitcoin scaling landscape"
   width="100%"
+  className="mx-auto"
 />
 
 The catch? None of these completely meet all the required criteria to be a true scaling solution, just yet.
