--- a/docs/pages/resources/community-guidelines.mdx
+++ b/docs/pages/resources/community-guidelines.mdx
@@ -4,25 +4,25 @@ Becoming a true Surgant 🐜 involves creating a respectful and energized atmo
 
 Treat everyone with respect and kindness. Absolutely no harassment, witch hunting, sexism, racism, or hate speech will be tolerated.
 
-🔌 No Advertising or Spam 🔌 <br/>
+🔌 **No Advertising or Spam** 🔌 <br/>
 No spam or self-promotion (server invites, advertisements, etc.) without permission from a staff member. This includes DMing fellow members.
 
-🚫 No Offensive Content 🚫 <br/>
+🚫 **No Offensive Content** 🚫 <br/>
 No age-restricted, obscene, or offensive content. This includes text, images, or links featuring nudity, sex, hard violence, or other graphically disturbing content.
 
-💡 No Requests for Money or Tokens 💡 <br/>
+💡 **No Requests for Money or Tokens** 💡 <br/>
 No member of the team will ask for money or offer tokens for sale. If you receive any such messages, report them to the Surge admins or team members for appropriate action.
 
-🌐 No Speculations 🌐 <br/>
+🌐 **No Speculations** 🌐 <br/>
 Discussion or speculation regarding airdrops, ICO/IEO, or trading is not allowed and will be deleted.
 
-🔋 No Impersonation and Logo Usage 🔋 <br/>
+🔋 **No Impersonation and Logo Usage** 🔋 <br/>
 Do not use the name "Surge" or the name of any other third-party platform in a username that may impersonate a team member. Do not use the Surge logo as your avatar.
 
-📄 Partnerships with Surge 📄 <br/>
+📄 **Partnerships with Surge** 📄 <br/>
 Interested in partnering with Surge? Please fill out our partnership form for review and approval. DMing team members regarding partnerships without prior submission will be considered spam.
 
-🔒 Security Consciousness 🔒 <br/>
+🔒 **Security Consciousness** 🔒 <br/>
 Be security conscious, Surgants! All your possible answers are in the docs.
 
 - No member of the TEAM will DM you first.
