--- a/docs/pages/tech-specs/overview.mdx
+++ b/docs/pages/tech-specs/overview.mdx
@@ -25,7 +25,11 @@ Our approach to solving this problem is by using a novel way of aggregating proo
 
 This not only drives the cost down for L2s it also cuts the frequency needed to push data on mainchain thereby further freeing up blockspace.
 
-<ZoomImage src="/assets/surge_metalayer.png" alt="stack" width="100%" />
+<ZoomImage
+  src="/assets/surge_metalayer.png"
+  alt="Surge Network Overview"
+  width="100%"
+/>
 
 ## How does it work?
 
@@ -42,4 +46,5 @@ The Surge network adopts a modular approach, leveraging the best practices and l
   src="/assets/surge_network_architecture.png"
   alt="superstack core functions"
   width="70%"
+  className="mx-auto"
 />
