--- a/docs/pages/tech-specs/architecture/indexers.mdx
+++ b/docs/pages/tech-specs/architecture/indexers.mdx
@@ -5,52 +5,26 @@ description: Enhancing Rollup Functionality
 
 import ZoomImage from "../../../components/ZoomImage";
 
-# Indexer
+# Indexers
 
-## Overview
+To enhance transparency and enable auditing of the Surge Network's data achieving Bitcoin finality, we have a specialized Unspent Transaction Output (UTXO) Indexer. This Indexer systematically scans the Bitcoin blocks, focusing exclusively on transactions associated with the Surge Network—specifically, UTXOs containing unique identifiers.
 
-The Surge Network integrates a specialized Unspent Transaction Output (UTXO) Indexer to enhance transparency and facilitate efficient auditing, while achieving Bitcoin finality. This Indexer plays a critical role by systematically scanning Bitcoin blocks, specifically focusing on transactions tied to the Surge Network. It tracks UTXOs that contain unique Surge identifiers, ensuring seamless interaction between Surge and Bitcoin's blockchain.
+The Indexer integrates with a Bitcoin node to access real-time blockchain data. It monitors newly mined blocks and parses each transaction to detect Surge identifiers embedded within transaction data, such as in `OP_RETURN` fields or encoded within `scriptPubKey`. By filtering out irrelevant transactions, the Indexer optimizes performance and resource utilization.
 
-Integration with Bitcoin Nodes
-The UTXO Indexer is fully integrated with a Bitcoin node, allowing it to access real-time blockchain data. As new blocks are mined, the Indexer monitors these blocks, parsing through transactions to detect Surge-specific identifiers. These identifiers are embedded within transaction data, often found in OP_RETURN fields or encoded within the scriptPubKey. By filtering out irrelevant transactions, the Indexer ensures high performance and optimal resource utilization.
+When a transaction with a Surge identifier is detected, the Indexer extracts key information, including the sender's public key _P<sub>sender</sub>_ , signature _S_, and the associated data blob _B_. The authenticity and integrity of the data are verified by checking the signature:
 
-## Core Utilities
+<div align="center">
+  _Verify(P<sub>Sender</sub> , S, H(B)) = True_
+</div>
 
-The core utilities of an Indexer, particularly in a blockchain network like Surge, are designed to optimize data retrieval, transaction tracking, and verification processes. Here are the key functions:
-
-### 1. **Data Extraction and Parsing**
-
-- **Real-time Monitoring:** The Indexer scans newly mined blocks in real-time, extracting relevant transactions and information from the blockchain.
-- **Filtering of Relevant Data:** It focuses on specific transactions, such as those containing network-specific identifiers (e.g., Surge identifiers), ignoring irrelevant data to optimize performance.
-
-### 2. **Transaction Tracking**
-
-- **UTXO Management:** In a Bitcoin-based system, the Indexer keeps track of Unspent Transaction Outputs (UTXOs). It identifies both newly created and spent UTXOs, ensuring up-to-date transaction status.
-- **Efficient Data Retrieval:** The Indexer maintains an optimized database, allowing for quick access to relevant transactions and outputs whenever needed.
-
-### 3. **Verification and Integrity Checking**
-
-- **Signature Validation:** For each tracked transaction, the Indexer verifies the authenticity and integrity of data by validating digital signatures (e.g., using public keys, signatures, and hashed data).
-- **Double-spend Prevention:** By tracking UTXOs, the Indexer helps prevent double-spending, a critical feature in maintaining blockchain integrity.
-
-### 4. **Event and Trigger Management**
-
-- **Event Detection:** The Indexer can trigger actions when specific conditions are met, such as the detection of a UTXO associated with a specific network or a particular transaction type.
-- **Automation Support:** This allows the network to automate certain functions, such as reward distributions or proof submissions based on UTXO changes.
-
-### 5. **Auditability and Transparency**
-
-- **Data Integrity Logs:** The Indexer keeps a historical log of all tracked transactions, ensuring that the network is auditable and transparent.
-- **Finality Assurance:** By indexing all relevant transactions and maintaining records of UTXO states, it guarantees finality and provides a solid foundation for auditing and compliance.
-
-### 6. **Resource Efficiency**
-
-- **Optimized for Performance:** It is designed to efficiently process blockchain data, reducing the computational load on the network by indexing only the necessary transactions.
-- **Scalability:** An Indexer enables a blockchain network to handle larger volumes of transactions by providing quick access to relevant transaction data, improving the scalability of the system.
-
-These core utilities make an Indexer a vital tool in any blockchain ecosystem, providing a framework for efficient data handling, transparency, and security, which are essential for the integrity and scalability of the network.
+Where, _H(B)_ is the hash of the data blob. The Indexer updates the set of Surge-related UTXOs, continuously tracking both new and spent outputs. This UTXO set _UTXO<sub>Surg</sub>_ is maintained in an optimized database for efficient management and quick retrieval.
 
 <ZoomImage
-  src="/assets/indexer-surge.svg"
-  alt="superstack core functions"
+  src="/assets/utxo_indexer.png"
+  alt="UTXO Indexer Flow"
+  className="md:w-[95%] w-[80%] mx-auto"
 />
+
+## OP_CAT Proposal and On-Chain Validation
+
+The proposed reintroduction of OP_CAT enables on-chain proof validation directly within Bitcoin. With OP_CAT, critical parts of transaction and proof data can be concatenated using opcodes within Bitcoin Script itself, allowing participants to reconstruct and verify aggregated proofs against the committed data stored in UTXOs.
