--- a/docs/pages/tech-specs/architecture/archive/indexers.mdx
+++ b/docs/pages/tech-specs/architecture/archive/indexers.mdx
@@ -3,7 +3,7 @@ title: Indexers
 description: Enhancing Rollup Functionality
 ---
 
-import ZoomImage from "../../../components/ZoomImage";
+import ZoomImage from "../../../../components/ZoomImage";
 
 # Indexer
 
@@ -50,7 +50,4 @@ The core utilities of an Indexer, particularly in a blockchain network like Surg
 
 These core utilities make an Indexer a vital tool in any blockchain ecosystem, providing a framework for efficient data handling, transparency, and security, which are essential for the integrity and scalability of the network.
 
-<ZoomImage
-  src="/assets/indexer-surge.svg"
-  alt="superstack core functions"
-/>
+<ZoomImage src="/assets/indexer-surge.svg" alt="superstack core functions" />
