feat: content changes

--- a/docs/pages/bitcoin-reports/in-house-research.mdx
+++ b/docs/pages/bitcoin-reports/in-house-research.mdx
@@ -1,1 +1,8 @@
-#In house research
+# In-house Research
+
+Advocating for the dire need for quality research content in the Bitcoin space, we at Surge are dedicating a portion of our efforts to create well-documented, data-backed reports. Find the latest here:
+
+| Report Name                                        | URL                                                                         |
+| -------------------------------------------------- | --------------------------------------------------------------------------- |
+| **The rising challenges with Bitcoin Scalability** | https://surge.build/research/the-rising-challenges-with-bitcoin-scalability |
+| **Analysing the Bitcoin Scaling Landscape**        | https://surge.build/research/analysing-the-bitcoin-scaling-landscape        |
