feat: use-cases

--- a/docs/pages/overview/introduction.mdx
+++ b/docs/pages/overview/introduction.mdx
@@ -9,7 +9,7 @@ description: Composable MetaLayer to scale Bitcoin
 
 Surge is Bitcoin’s first **Composable Scaling Metalayer**, aimed to unlock the new BTCFi Economy.
 
-Rethinking how Bitcoin scaling is approached, Surge facilitates a solution-agnostic future where Rollups, dApps and metaprotocols seamlessly interoperate on a decentralised intermediary layer — whose sole purpose is to push the boundaries of Bitcoin functionality enabling an environment with high-throughput, cost-effective and higher program expressivity.
+Rethinking how Bitcoin scaling is approached, Surge facilitates a solution-agnostic future where Rollups, dApps and metaprotocols seamlessly interoperate on a decentralised intermediary layer — whose sole purpose is to push the boundaries of Bitcoin functionality by enabling a high-throughput, cost-effective environment with higher program expressivity.
 
 Surge achieves this by using advanced cryptographic technologies like zero-knowledge proofs. It takes it one step further by designing its core-architecture to ensure high scalability without compromising security.
 
@@ -17,4 +17,4 @@ Surge achieves this by using advanced cryptographic technologies like zero-knowl
 
 This sets up the perfect environment for builders to focus on launching their ideas be it App-specific Rollups, GameFi, Ordinals or any other DeFi use-case whilst inheriting the security and the liquidity of Bitcoin.
 
-**What set’s Surge apart from most other scaling approaches is it’s zero-dependance on Bitcoin soft-forks or core-level updates.**
+**What sets Surge apart from most other scaling approaches is it’s zero-dependance on Bitcoin soft-forks or core-level updates.**
