fix: content update for the architecture

--- a/docs/pages/overview/introduction.mdx
+++ b/docs/pages/overview/introduction.mdx
@@ -1,20 +1,20 @@
 ---
 title: Surge | Introduction
-description: Composable MetaLayer to scale Bitcoin
+description: Composable MetaLayer to Scale Bitcoin
 ---
 
 <img src="/assets/intro.png" alt="Introduction" />
 
-# Introduction [Composable MetaLayer to scale Bitcoin]
+# Introduction [Composable MetaLayer to Scale Bitcoin]
 
-Surge is Bitcoin’s first **Composable Scaling Metalayer**, aimed to unlock the new BTCFi Economy.
+Surge is Bitcoin’s first **Composable Scaling Metalayer**, designed to unlock the new BTCFi Economy.
 
-Rethinking how Bitcoin scaling is approached, Surge facilitates a solution-agnostic future where Rollups, dApps and metaprotocols seamlessly interoperate on a decentralised intermediary layer — whose sole purpose is to push the boundaries of Bitcoin functionality by enabling a high-throughput, cost-effective environment with higher program expressivity.
+Rethinking how Bitcoin scaling is approached, Surge facilitates a solution-agnostic future where Rollups, dApps and metaprotocols seamlessly interoperate on a decentralised intermediary layer — whose sole purpose is to push the boundaries of Bitcoin functionality enabling an environment with high-throughput, cost-effective and enhanced program expressivity.
 
 Surge achieves this by using advanced cryptographic technologies like zero-knowledge proofs. It takes it one step further by designing its core-architecture to ensure high scalability without compromising security.
 
 **Using zk-aggregation and decentralised verification mechanisms, Surge is tuned for drastic cost reduction in verifying and pushing proofs to Bitcoin.**
 
-This sets up the perfect environment for builders to focus on launching their ideas be it App-specific Rollups, GameFi, Ordinals or any other DeFi use-case whilst inheriting the security and the liquidity of Bitcoin.
+This creates the perfect environment for builders to focus on launching their ideas be it App-specific Rollups, GameFi, Ordinals or any other DeFi use-case whilst inheriting the security and the liquidity of Bitcoin.
 
 **What sets Surge apart from most other scaling approaches is it’s zero-dependance on Bitcoin soft-forks or core-level updates.**
