--- a/docs/pages/surge-metalayer/overview.mdx
+++ b/docs/pages/surge-metalayer/overview.mdx
@@ -5,17 +5,17 @@ description: A Bitcoin native MetaLayer for Scaling
 
 import ZoomImage from "../../components/ZoomImage";
 
-# Fundamentals
+# Fundamentals [A Bitcoin native MetaLayer for Scaling]
 
 ## What is Surge Metalayer?
 
-Surge Network is a composable MetaLayer on Bitcoin built to provide a secure, fast, cheap network for launching Rollups and dApps to scale Bitcoin innovation. It combines Bitcoin's robust security model with advanced cryptographic techniques like zkp-aggregation and decentralized verification mechanisms, which ensure scalability without compromising security.
+Surge Network is a composable MetaLayer on Bitcoin built to provide a secure, fast, and cost-effectiv network for launching Rollups and dApps to scale Bitcoin innovation. It combines Bitcoin's robust security model with advanced cryptographic techniques like zkp-aggregation and decentralized verification mechanisms, which ensure scalability without compromising security.
 
 In short, Surge serves as the ideal interstitial metalayer, inheriting Bitcoin’s security and extending it to everything built on top of its network.
 
 ## Why build a Metalayer?
 
-Having studied various Bitcoin scaling approaches, the race to scale Bitcoin is real and there is no set way of **_getting it right._**
+Having studied various Bitcoin scaling approaches, the race to scale Bitcoin is real and there is no definitive way of **_getting it right._**
 
 Be it protocol level changes like OP_CAT, inscription based solutions or various other off-chain-compute on-chain-verify solutions, one thing is clear — Most upcoming scaling projects **will bloat the state of Bitcoin**
 
@@ -35,12 +35,9 @@ This not only drives the cost down for L2s it also cuts the frequency needed to 
 
 The Surge network adopts a modular approach, leveraging the best practices and lessons from other ecosystems. Inspired by the Cosmos modular design, Surge enables decentralized proof validation, while CometBFT ensures Byzantine Fault Tolerant (BFT) consensus across the network, offering high performance and security. The Surge Integration Kit empowers developers to integrate Zero-Knowledge Proofs (ZKPs) and deploy secure rollups and dApps, inheriting Bitcoin's robust security guarantees. This approach provides a reliable foundation for Surge's key network components:
 
-- **1. Verifiers:**
-  Dedicated to zk-proof verification, Surge Verifiers are integral in aggregating and settling validated proofs on Bitcoin.
-- **2. Integrated Signers:**
-  These handle transaction signing and manage distributed cryptographic keys, governing BTC vault operations with precision and reliability.
-- **3. UTXO Indexers:**
-  Open to anyone, Indexers ensure transparent and seamless data retrieval, critical for enabling real-time audits across the network.
+1. **Verifiers:** Dedicated to zk-proof verification, Surge Verifiers are integral in aggregating and settling validated proofs on Bitcoin.
+2. **Integrated Signers:** These handle transaction signing and manage distributed cryptographic keys, governing BTC vault operations with precision and reliability.
+3. **UTXO Indexers:** Open to anyone, Indexers ensure transparent and seamless data retrieval, critical for enabling real-time audits across the network.
 
 <ZoomImage
   src="/assets/surge_network_architecture.png"
