--- a/docs/pages/surge-metalayer/architecture/signers.mdx
+++ b/docs/pages/surge-metalayer/architecture/signers.mdx
@@ -5,24 +5,20 @@ description: Decentralized TSS network for signing operations using the DKLS23 E
 
 import ZoomImage from "../../../components/ZoomImage";
 
-# Signers
+# Signers [Decentralized Signing for Bitcoin Inscriptions]
 
-The Signers manage decentralized signing operations using the DKLs23 EdDSA/ECDSA scheme, ensuring secure, decentralized management of cryptographic keys for inscribing zk-proofs into Bitcoin.  
-DKLs23 is preferred for its use of Oblivious Transfer-based Multiplication (OT Mul), which significantly reduces computational overhead and latency compared to traditional Paillier-based methods. This efficiency enables faster key generation and signing, making DKLs23 highly scalable for large decentralized networks.
+Signers manage cryptographic key operations using the DKLs23 EdDSA/ECDSA scheme, which is optimized for scalability and security. DKLs23 leverages Oblivious Transfer-based Multiplication (OT Mul), significantly reducing computational overhead compared to traditional methods like Paillier. This enables rapid key generation and signing, critical for large decentralized networks.
 
-## Decentralized Signing and Inscription
+### Decentralized Key Management with TSS
+Signers operate within a Threshold Signature Scheme (TSS) network, distributing cryptographic keys across multiple nodes to avoid centralized control. Unlike Bitcoin’s native multisig, which allows specific parties to control transaction approval, TSS ensures no single party can compromise the private key, enhancing security through distributed authority.
 
-- **Decentralized Key Management**: A quorum-based signing process of nodes is required to sign a transaction, ensuring a decentralized approach to key management.
+The Signers’ role extends to managing the BTC Vault and Bridge operations, facilitating secure cross-chain transfers. Users can peg-in by locking BTC in the vault, gaining equivalent assets on Surge’s network, and peg-out to reclaim BTC. This decentralized bridge relies on DKLs23 signatures and TSS, ensuring that no single entity controls the process, which bolsters security against potential breaches.
 
-- **BTC Vault & Distributed Signers**: Signers manage BTC vault and Bridge operations, enabling secure cross-chain transfers between Bitcoin and other rollups. The bridge utilizes peg-in and peg-out processes, where users lock their BTC in the vault to access its value on another blockchain. The core of this system is the DKLs23 signature scheme combined with a TSS decentralized network, where cryptographic key management and signing are distributed across multiple Signers. This ensures that no single entity controls the vault, enhancing security and decentralization. The DKLs23 scheme’s use of advanced cryptography reduces latency and computational overhead, allowing efficient and secure authorization of BTC releases from the vault.
-
-## Security and Resilience via TSS Network
-
-- **Signer Node Operation**: The Signer Node operates within a standalone TSS (Threshold Signature Scheme) network, ensuring that no single node controls the signing process and utilizes M of N consensus to securely manage key shares and signatures.
-
-- **Distributed Key Generation (DKG)**: The key generation is distributed across the TSS network, ensuring that no single party has access to the entire private key.
-
-- **Proactive Key Refresh**: The system includes regular key rotation and refresh processes, ensuring that keys are never permanently exposed and remain secure even in the face of node compromise.
+### Enhanced Security and Efficiency
+- **Distributed Key Generation (DKG)**: Keys are generated across the TSS network, with no party holding full control. This setup enhances security by distributing key authority.
+- **Proactive Key Refresh: Regular rotation and refreshment of keys mitigate exposure risks. This continuous refresh ensures keys are resilient, even if individual nodes are compromised.
+- **Weighted Node Participation: Nodes within the TSS are weighted based on stake, reputation, and performance, prioritizing reliable nodes and reducing latency in signing.
+- **Malicious Node Detection and Slashing: DKLs23 includes mechanisms to detect and penalize malicious behavior. Any node found acting improperly can face slashing, where its staked assets are forfeited, preserving network integrity.
 
 <ZoomImage
   src="/assets/key_refresh.png"
@@ -30,24 +26,12 @@ DKLs23 is preferred for its use of Oblivious Transfer-based Multiplication (OT M
   className="md:w-[50%] w-[80%] mx-auto"
 />
 
-- **Weighted Nodes**: Nodes are assigned weights based on factors like stake, reputation, performance, or governance roles.
-
-  - **_Prioritized Signing_**: Higher-weighted nodes are prioritized in the signing process, allowing for faster consensus and signature generation.
-
-  - **_Reduced Latency_**: Reliable and fast nodes with higher weights can reduce overall latency in the TSS signing process.
-
-  - **_Security and Fault Tolerance_**: High-weighted nodes improve security by being more accountable and enhance fault tolerance by ensuring progress even if some nodes fail.
-
-- **Malicious Node Detection**: The DKLs23 protocol includes mechanisms to detect and mitigate malicious nodes during key generation and threshold signing.
-
-  - **_Consistency Checks_**: The protocol checks message consistency, allowing nodes to detect and flag deviations from expected behavior.
-  - **_Audit Trails_**: Actions and messages are logged, enabling the identification of malicious nodes through post-event analysis.
-  - **_Complaint Mechanism_**: Nodes can file complaints against suspicious behavior, leading to the exclusion of confirmed malicious nodes.
-
-- **Stake-Based Security and Slashing**: In the event of identifying a malicious actor, the network employs economic penalties through slashing. Validators are required to stake cryptocurrency as a security bond. If they engage in malicious or faulty behavior, a portion of their stake is slashed, serving as a deterrent and maintaining the network’s security and integrity.
+### Why TSS over Bitcoin’s Native Multisig?
+Bitcoin’s multisig can secure transactions by requiring multiple signatures, but it lacks TSS’s decentralized structure. With MPC TSS, Surge distributes control across nodes, removing any single point of failure. This approach ensures that no single entity controls the network or vault, which is crucial for securely managing zk-proof inscriptions on Bitcoin. TSS provides a more scalable, secure, and flexible framework, essential for Surge’s high-throughput demands.
 
 <ZoomImage
   src="/assets/tss_network.png"
   alt="Economic guarantee of TSS Network"
   className="md:w-[95%] w-[80%] mx-auto"
 />
+
