--- a/docs/pages/surge-metalayer/security.mdx
+++ b/docs/pages/surge-metalayer/security.mdx
@@ -1,4 +1,4 @@
-# Bitcoin Security
+# Anchored on Bitcoin
 
 Surge guarantees Bitcoin finality by inscribing both the state commitment Mroot of the Network and the aggregated proof of zk-proofs ( P<sub>agg</sub>) onto Bitcoin by embedding the data into a UTXO using the Commit-Reveal Framework.
 Let UTXO<sub>Surge</sub> denote the Bitcoin UTXO transaction that inscribes this data:
